make code simpler removed extra tags managed color contrasts fixed dropdown menu

--- a/style.css
+++ b/style.css
@@ -1,47 +1,59 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-nav{
-    height: 100vh;
-    width: 100%;
-    background-color: blue;
-
-}
-.list_items{
+header {
     display: flex;
-    justify-content: space-between;
-    padding: 1.5rem 7rem;
-    color: white;
-    list-style: none;
+    align-items: center;
+    justify-content: space-around;
+    background-color: cornflowerblue;
 }
-.list_items li a{
+header > h1 {
+    color: snow;
+    cursor: pointer;
+}
+.list_items {
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+.list_items li a {
     color: white;
     text-decoration: none;
+    margin-right: 2rem;
+}
+select {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+}
+.main_section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 5rem;
+}
+.main_section_paragraph {
+    width: 50%;
+    text-align: center;
+    color: gray;
+}
+.main_section > h1 {
+    font-size: 3rem;
+}
+button {
+    width: fit-content;
+    height: fit-content;
+    padding: 0.8rem 1rem;
     cursor: pointer;
-}
-.main_section{
-    padding: 6rem 7rem;
-}
-.paragraph{
-    font-weight: bolder;
-    font-size: xx-large;
+    background: cornflowerblue;
     color: white;
-}
-.second_para{
-    padding-top: 1.5rem;
-    font-weight: bold;
-    color: white;
-}
-.btn{
-    padding-top: 1.5rem;
-}
-.btn button{
-    background-color: red;
-    color: white;
-    border-radius: 2rem;
-    padding: .4rem;
-    font-weight: bold;
-    cursor: pointer;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 0.4rem;
 }
